# Preficando-Pizzas

./: README.md
Precificando-pizzas-com-python-stl-e-ML/: README.md  app.py  pyproject.toml  testes.ipynb
